# Progetto-ListaSpesa

./: CMakeLists.txt  ShoppingList.cpp  ShoppingList.h  item.h  main.cpp  observer.h  user.cpp  user.h
tests/: test_main.cpp
